--- a/cycle1.ipynb
+++ b/cycle1.ipynb
@@ -6,7 +6,7 @@
       "name": "cycle1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWC9prbuSkC33X6E9kTBDM",
+      "authorship_tag": "ABX9TyMnxt+iKm8COM8Esed2RCVu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "                print(num)\n",
         "                break"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
         "        n2  = nth\n",
         "        i += 1"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
         "else :\n",
         "    print(\"Scalene Triangle\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,25 +156,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xghXExYwLC3m"
+        "id": "xghXExYwLC3m",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db937b98-fc89-46ee-deb9-2825ec4f60ac"
       },
       "source": [
         "#4\n",
-        "\n"
+        "\n",
+        "num1= int(input(\" enter the first number: \")) \n",
+        "num2= int(input(\"enter the second number: \")) \n",
+        "mn = min(num1, num2) \n",
+        "for i in range(1, mn+1): \n",
+        " if num1%i==0 and num2%i==0:  \n",
+        "    hcf = i \n",
+        "if hcf == 1: \n",
+        " print(\"Entered numbers are coprime\") \n",
+        "else: \n",
+        " print(\" They are not Co-Prime\")"
       ],
-      "execution_count": 24,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " enter the first number: 6\n",
+            "enter the second number: 4\n",
+            " They are not Co-Prime\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vIJMvT0BPuC1"
+        "id": "vIJMvT0BPuC1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "110ce467-be12-4ad6-d289-341dd9be96a2"
       },
       "source": [
-        "#5\n"
+        "#5\n",
+        "a, b, c = [int(input()) for _ in range(3)]\n",
+        "if a == 0:\n",
+        "    print(round(-c / b, 2))\n",
+        "else:\n",
+        "    d = b * b - 4 * a * c\n",
+        "    if d < 0:\n",
+        "        print('no roots')\n",
+        "    elif d == 0:\n",
+        "        print(round(-b / 2 / a, 2))\n",
+        "    else:\n",
+        "        print(round((-b - d ** 0.5) / 2 / a, 2))\n",
+        "        print(round((-b + d ** 0.5) / 2 / a, 2))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "-5\n",
+            "6\n",
+            "2.0\n",
+            "3.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -197,7 +249,7 @@
         "else:\n",
         "    print(\"The number is not a Perfect number!\")\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +291,7 @@
         "   if num == sum:\n",
         "       print(num)\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +345,7 @@
         "    res_lt.append( lt1[x] + lt2[x])  \n",
         "print ( \" Addition of the list lt1 and lt2 is: \" + str (res_lt))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,37 +365,60 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E14Fml9BPYBT",
-        "outputId": "1e2d1f74-fbfc-4358-9da4-5d0ba77e9d4e"
+        "outputId": "cf9b9f1f-75a6-4587-e5a2-91f7496ad2c2"
       },
       "source": [
         "#10\n",
-        "X = [[1, 2, 3],\n",
-        "     [4, 5, 6],\n",
-        "     [7, 8, 9]]\n",
+        "rows = int(input(\"Enter the Number of rows : \" ))\n",
+        "column = int(input(\"Enter the Number of Columns: \"))\n",
         "\n",
-        "Y = [[9, 8, 7],\n",
-        "     [6, 5, 4],\n",
-        "     [3, 2, 1]]\n",
+        "print(\"Enter the elements of First Matrix:\")\n",
+        "matrix_a= [[int(input()) for i in range(column)] for i in range(rows)]\n",
+        "print(\"First Matrix is: \")\n",
+        "for n in matrix_a:\n",
+        "    print(n)\n",
         "\n",
-        "result = [[0, 0, 0],\n",
-        "          [0, 0, 0],\n",
-        "          [0, 0, 0]]\n",
-        "for i in range(len(X)):\n",
-        "    for j in range(len(X[0])):\n",
-        "        result[i][j] = X[i][j] + Y[i][j]\n",
+        "print(\"Enter the elements of Second Matrix:\")\n",
+        "matrix_b= [[int(input()) for i in range(column)] for i in range(rows)]\n",
+        "for n in matrix_b:\n",
+        "    print(n)\n",
+        "    \n",
+        "result=[[0 for i in range(column)] for i in range(rows)]\n",
         "\n",
+        "for i in range(rows):\n",
+        "    for j in range(column):\n",
+        "        result[i][j] = matrix_a[i][j]+matrix_b[i][j]\n",
+        "\n",
+        "print(\"The Sum of Above two Matrices is : \")\n",
         "for r in result:\n",
         "    print(r)"
       ],
-      "execution_count": 26,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[10, 10, 10]\n",
-            "[10, 10, 10]\n",
-            "[10, 10, 10]\n"
+            "Enter the Number of rows : 2\n",
+            "Enter the Number of Columns: 2\n",
+            "Enter the elements of First Matrix:\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "First Matrix is: \n",
+            "[2, 3]\n",
+            "[4, 5]\n",
+            "Enter the elements of Second Matrix:\n",
+            "5\n",
+            "4\n",
+            "2\n",
+            "1\n",
+            "[5, 4]\n",
+            "[2, 1]\n",
+            "The Sum of Above two Matrices is : \n",
+            "[7, 7]\n",
+            "[6, 6]\n"
           ]
         }
       ]
@@ -373,7 +448,7 @@
         "for i in a:     \n",
         "    print(i, end = \" \")   "
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +483,7 @@
         " \n",
         "print(\"Total number of vowels - \",count_vowels)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,7 +527,7 @@
         "        missing_elements.append(ele)\n",
         "print(missing_elements)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
