--- a/cycle1.ipynb
+++ b/cycle1.ipynb
@@ -6,7 +6,7 @@
       "name": "cycle1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMnxt+iKm8COM8Esed2RCVu",
+      "authorship_tag": "ABX9TyPPp7Zc2cSJoW942fgZQ7lg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,7 +176,7 @@
         "else: \n",
         " print(\" They are not Co-Prime\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "        print(round((-b - d ** 0.5) / 2 / a, 2))\n",
         "        print(round((-b + d ** 0.5) / 2 / a, 2))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +320,9 @@
         "id": "SFbgeCooPyz0"
       },
       "source": [
-        "#8\n"
+        "#8\n",
+        "l1=[\"monday\", \"tuesday\", \"wed\", \"thu\", \"friday\", \"sat\"]\n",
+        "mytuple"
       ],
       "execution_count": null,
       "outputs": []
@@ -393,7 +395,7 @@
         "for r in result:\n",
         "    print(r)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,23 +432,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Fcc6BJPRq4h",
-        "outputId": "b0afe1df-c2a9-4105-c005-c97259a12abf"
+        "outputId": "d0c862e2-a15a-44c6-c191-32902eb4a406"
       },
       "source": [
         "#11\n",
-        "a = [35, 10, 31, 11, 26]    \n",
-        "print(\"Before sorting array elements are - \")  \n",
-        "for i in a:     \n",
-        "    print(i, end = \" \")    \n",
-        "for i in range(0,len(a)):    \n",
-        "    for j in range(i+1,len(a)):    \n",
-        "        if a[j]<a[i]:    \n",
-        "            temp = a[j]    \n",
-        "            a[j]=a[i]    \n",
-        "            a[i]=temp    \n",
-        "print(\"\\nAfter sorting array elements are - \")    \n",
-        "for i in a:     \n",
-        "    print(i, end = \" \")   "
+        "\n",
+        "\n",
+        "n = int(input(\"Enter the size of the list1 : \"))\n",
+        "a = list(int(num) for num in input(\"Enter the list items :\").strip().split())[:n]\n",
+        "print(\"Before sorting array elements are - \")\n",
+        "for i in a:\n",
+        "    print(i, end = \" \")\n",
+        "for i in range(0,len(a)):\n",
+        "    for j in range(i+1,len(a)):\n",
+        "        if a[j]<a[i]:\n",
+        "            temp = a[j]\n",
+        "            a[j]=a[i]\n",
+        "            a[i]=temp\n",
+        "print(\"\\nAfter sorting array elements are - \")\n",
+        "for i in a:\n",
+        "    print(i, end = \" \")"
       ],
       "execution_count": null,
       "outputs": [
@@ -454,10 +459,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Enter the size of the list1 : 3\n",
+            "Enter the list items :12 3 2\n",
             "Before sorting array elements are - \n",
-            "35 10 31 11 26 \n",
+            "12 3 2 \n",
             "After sorting array elements are - \n",
-            "10 11 26 31 35 "
+            "2 3 12 "
           ]
         }
       ]
@@ -498,43 +505,72 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tQbMc5C4TpSI"
+        "id": "tQbMc5C4TpSI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "85d3240e-88d2-4409-db7f-a6ce989610c8"
       },
       "source": [
-        "#13\n"
+        "#13\n",
+        "def repeat_times(n):\n",
+        "  s = 0\n",
+        "  n_str = str(n)\n",
+        "  while (n > 0):\n",
+        "    n -= sum([int(i) for i in list(n_str)])\n",
+        "    n_str = list(str(n))\n",
+        "    s += 1\n",
+        "  return s\n",
+        "print(repeat_times(9))\n",
+        "print(repeat_times(21))\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 129
+          "height": 316
         },
         "id": "Hl_Mb9SwTqpI",
-        "outputId": "7a7d92e2-6cb1-4972-da91-d0a303995514"
+        "outputId": "1dc6481d-73fe-4575-fc37-60f8e87cfae0"
       },
       "source": [
         "#14\n",
-        "\n",
-        "n = int(input(\"Enter  number: \"))\n",
-        "n = arr[]\n",
-        "missing_elements = []\n",
-        "for ele in range(arr[0], arr[-1]+1):\n",
-        "    if ele not in arr:\n",
-        "        missing_elements.append(ele)\n",
-        "print(missing_elements)"
+        "def missing(n):\n",
+        " r=0;\n",
+        " result=[]\n",
+        " while r<=9:\n",
+        "  if r not in (n):\n",
+        "   result.append(x)\n",
+        "   r+=1\n",
+        " return result\n",
+        "x=[9,3,1,5,5,3,0,8,4,7]\n",
+        "print(missing(x))"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "SyntaxError",
+          "ename": "KeyboardInterrupt",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-d6c79b3533da>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    n=arr[]\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-428a2266cea5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m  \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-2-428a2266cea5>\u001b[0m in \u001b[0;36mmissing\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      3\u001b[0m  \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m  \u001b[0;32mwhile\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m    \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
