--- a/cycle1.ipynb
+++ b/cycle1.ipynb
@@ -6,7 +6,7 @@
       "name": "cycle1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPp7Zc2cSJoW942fgZQ7lg",
+      "authorship_tag": "ABX9TyOHooYRIzsq7iaNepjiuXi6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,15 +317,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SFbgeCooPyz0"
+        "id": "SFbgeCooPyz0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "625f35e9-2a4c-4272-b658-b69dde14b26b"
       },
       "source": [
         "#8\n",
-        "l1=[\"monday\", \"tuesday\", \"wed\", \"thu\", \"friday\", \"sat\"]\n",
-        "mytuple"
+        "week_list=['sunday','monday','tuesday','wednesday','thursday','friday','saturday']\n",
+        "week_set=set(week_list)\n",
+        "week_tuple=tuple(week_list)\n",
+        "print(week_list)\n",
+        "print(week_set)\n",
+        "print(week_tuple)\n",
+        "print(\"Type of week_list is \",type(week_list))\n",
+        "print(\"Type of week_set is \",type(week_set))\n",
+        "print(\"Type of week_tuple is \",type(week_tuple))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday']\n",
+            "{'friday', 'sunday', 'tuesday', 'monday', 'wednesday', 'saturday', 'thursday'}\n",
+            "('sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday')\n",
+            "Type of week_list is  <class 'list'>\n",
+            "Type of week_set is  <class 'set'>\n",
+            "Type of week_tuple is  <class 'tuple'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
