--- a/cycle1.ipynb
+++ b/cycle1.ipynb
@@ -6,7 +6,7 @@
       "name": "cycle1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHooYRIzsq7iaNepjiuXi6",
+      "authorship_tag": "ABX9TyMLH8JnHZ/cTLgjiBu/2RDN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -335,7 +335,7 @@
         "print(\"Type of week_set is \",type(week_set))\n",
         "print(\"Type of week_tuple is \",type(week_tuple))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,37 +564,25 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 316
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Hl_Mb9SwTqpI",
-        "outputId": "1dc6481d-73fe-4575-fc37-60f8e87cfae0"
+        "outputId": "10a77b42-2397-42b3-d471-001099897a8c"
       },
       "source": [
         "#14\n",
-        "def missing(n):\n",
-        " r=0;\n",
-        " result=[]\n",
-        " while r<=9:\n",
-        "  if r not in (n):\n",
-        "   result.append(x)\n",
-        "   r+=1\n",
-        " return result\n",
-        "x=[9,3,1,5,5,3,0,8,4,7]\n",
-        "print(missing(x))"
+        "mobile = input('Please enter a mobile number: ' )\n",
+        "all = '0123456789'\n",
+        "print('missing digits are ', set(all) - set(mobile))"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-428a2266cea5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m  \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-2-428a2266cea5>\u001b[0m in \u001b[0;36mmissing\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      3\u001b[0m  \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m  \u001b[0;32mwhile\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m    \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter a mobile number: 9061142741\n",
+            "missing digits are  {'3', '8', '5'}\n"
           ]
         }
       ]
